Fixed: imagePopup alignment with image

--- a/blocks/elements.css
+++ b/blocks/elements.css
@@ -30,6 +30,7 @@
   background-position: center;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  object-fit: initial;
 }
 .elements__delete {
   padding: 0;
