--- a/blocks/image-popup.css
+++ b/blocks/image-popup.css
@@ -2,23 +2,32 @@
   width: 100vw;
   height: 100vh;
   top: 0;
-  left: -15px;
+  left: 0; /* adiciona o left */
+  position: fixed;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
-  position: fixed;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  z-index: 1;
 }
+
 .image-popup_hidden {
   display: none;
 }
+
 .image-popup__container {
   display: flex;
   position: relative;
-  max-height: 75vh;
-  max-width: 75vw;
-  min-height: auto;
+  max-height: 80vh;
+  max-width: calc(100% - 80px);
+  width: auto; 
+  height: fit-content;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
 }
 
 .image-popup__close-button {
@@ -28,21 +37,28 @@
   right: -32px;
   top: -32px;
   cursor: pointer;
+  z-index: 1;
 }
+
 .image-popup__close-button:hover {
-  opacity: 60%;
+  opacity: 0.6;
 }
+
 .image-popup__content {
-  width: 100%;
   object-fit: contain;
+  max-width: 100%;   
+  max-height: 80vh; 
+  width: auto;      
+  height: auto;
+  display: block;
 }
+
 .image-popup__title {
   margin: 0;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-weight: 400;
   font-size: 12px;
   line-height: 100%;
-  letter-spacing: 0%;
   color: #fff;
   position: absolute;
   bottom: -22px;
@@ -54,7 +70,9 @@
     max-width: calc(100% - 80px);
     max-height: calc(100% - 40px);
   }
+
   .image-popup__content {
-    width: calc(100%-25%);
+    max-width: 100%;
+    width: auto;
   }
 }
